log
Fri Apr  8 11:32:16 HSP 2022: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3df1bb6
Fri Apr  8 12:09:55 HSP 2022: 
 hashmap.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:55:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         while(flag=1)
         ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
881d811
Fri Apr  8 12:10:41 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
eb0f645
